force-app/main/default/objects/Survey_Response__c/fields/Collated_Responses__c.field-meta.xml
<CustomField>
    <fullName>Collated_Responses__c</fullName>
    <inlineHelpText>Easy to read view of Responses.</inlineHelpText>
    <label>Collated Responses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>