force-app/main/default/objects/Survey_Response__c/fields/Downgrade_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Downgrade_Explanation__c</fullName>
    <inlineHelpText>The response the respondent gave to the &quot;Downgrade Explanation Prompt&quot; (only available &quot;Downgrade Explanation Required&quot; on Survey).</inlineHelpText>
    <label>Downgrade Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>