force-app/main/default/objects/Survey_Response__c/fields/Has_Detailed_Responses__c.field-meta.xml
<CustomField>
    <fullName>Has_Detailed_Responses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when a survey submission has at least one Answer with specific feedback.</inlineHelpText>
    <label>Has Detailed Response(s)</label>
    <type>Checkbox</type>
</CustomField>