force-app/main/default/objects/Survey_Response__c/fields/Survey_Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Is Completed</label>
    <type>Checkbox</type>
</CustomField>