force-app/main/default/objects/Survey_Response__c/fields/Survey_Response_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_URL__c</fullName>
    <formula>HYPERLINK(
   $Setup.Survey_Settings__c.Survey_Base_URL__c + &quot;?srId=&quot; + CASESAFEID(Id)
  ,
  &quot;Response URL&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Response URL</label>
    <type>Text</type>
</CustomField>