force-app/main/default/objects/Survey_Response__c/fields/Upgrade_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Explanation__c</fullName>
    <inlineHelpText>The response the respondent gave to the &quot;Upgrade Explanation Prompt&quot; (only available &quot;Upgrade Explanation Required&quot; on Survey).</inlineHelpText>
    <label>Upgrade Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>